# midi-extractor

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: per_stem_training_plan.md
examples/: api_client_example.py  check_midi.py  convert_midi_type1.py  inference_tuner_ui.py  sweep_thresholds.py  transcribe_via_api.py  visualize_single.py  visualize_wav.py
scripts/: cleanup.sh
src/: cli.py
src/api/: __init__.py  api_server.py
src/audio/: preprocessing.py
src/datasets/: __init__.py  baby_slakh_stem_dataset.py  dataloader.py  slakh_stem_dataset.py  stem_indexer.py
src/inference/: __init__.py  inference.py  profiles.json
src/losses/: losses.py
src/model/InterpretableTranscription/: interpretable_transcription.py  loss.py
src/models/interpretable_transcription/: __init__.py  interpretable_transcription.py
src/train/: run_trainer.py  trainer.py
src/utils/: exceptions.py  logging.py  visualize_sample.py
tests/: test_error_handling.py
